--- a/NaturalMee-PersonalProjectX/NaturallyMee PersonalProject/NaturallyMee PersonalProject/Storyboards/ProductListDisplay.storyboard
+++ b/NaturalMee-PersonalProjectX/NaturallyMee PersonalProject/NaturallyMee PersonalProject/Storyboards/ProductListDisplay.storyboard
@@ -37,8 +37,8 @@
                                                         <constraint firstAttribute="width" secondItem="KPK-Vn-Js7" secondAttribute="height" multiplier="16:9" id="n0Y-je-Eue"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="2Pb-yu-IKd">
-                                                    <rect key="frame" x="156" y="32" width="207" height="25"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="2Pb-yu-IKd">
+                                                    <rect key="frame" x="156" y="11" width="207" height="68"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="Y2M-bd-eE3"/>
                                                     </constraints>
