--- a/NaturalMee-PersonalProjectX/NaturallyMee PersonalProject/NaturallyMee PersonalProject/Storyboards/TargetProductDisplay.storyboard
+++ b/NaturalMee-PersonalProjectX/NaturallyMee PersonalProject/NaturallyMee PersonalProject/Storyboards/TargetProductDisplay.storyboard
@@ -52,20 +52,20 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qbl-pB-qi2">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <inset key="scrollIndicatorInsets" minX="10" minY="10" maxX="10" maxY="10"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="5" id="VWV-RT-kuQ">
-                                    <size key="itemSize" width="182" height="184"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="scrollIndicatorInsets" minX="15" minY="15" maxX="15" maxY="15"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VWV-RT-kuQ">
+                                    <size key="itemSize" width="182" height="182"/>
                                     <size key="headerReferenceSize" width="0.0" height="10"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="categoryCell" id="qcD-Tw-rq4" customClass="CollectionViewCell" customModule="NaturallyMee_PersonalProject" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="10" width="182" height="184"/>
+                                        <rect key="frame" x="0.0" y="10" width="182" height="182"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="182" height="184"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="182" height="182"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ryx-H3-u39">
@@ -76,7 +76,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Wtj-sL-ueC">
-                                                    <rect key="frame" x="0.0" y="0.0" width="182" height="184"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="182" height="183"/>
                                                 </stackView>
                                             </subviews>
                                         </view>
@@ -103,7 +103,7 @@
                                 </collectionReusableView>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="qbl-pB-qi2" firstAttribute="trailing" secondItem="3JY-Gb-l48" secondAttribute="trailing" id="Cdl-6x-tX7"/>
                             <constraint firstItem="qbl-pB-qi2" firstAttribute="top" secondItem="3JY-Gb-l48" secondAttribute="top" id="GHt-C3-0be"/>
@@ -133,7 +133,6 @@
         <!--Tab Bar Controller-->
         <scene sceneID="hpz-O4-AFh">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RYA-U2-bRc" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController storyboardIdentifier="TargetProductDisplay" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0CQ-os-hkQ" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mDn-vZ-ugd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
@@ -145,6 +144,7 @@
                         <segue destination="b15-NV-uvP" kind="relationship" relationship="viewControllers" id="auI-6N-wkm"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RYA-U2-bRc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1015" y="1555"/>
         </scene>
