--- a/NaturalMee-PersonalProjectX/NaturallyMee PersonalProject/NaturallyMee PersonalProject/Storyboards/productDetail.storyboard
+++ b/NaturalMee-PersonalProjectX/NaturallyMee PersonalProject/NaturallyMee PersonalProject/Storyboards/productDetail.storyboard
@@ -18,28 +18,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fHS-3g-cVK">
-                                <rect key="frame" x="0.0" y="84" width="375" height="189"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qhv-5Z-Emk">
-                                <rect key="frame" x="23" y="382" width="329" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="16" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="JKE-gn-BhC">
-                                <rect key="frame" x="23" y="428" width="329" height="67"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ja-Uc-EwN">
-                                <rect key="frame" x="27" y="551" width="329" height="53"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ECT-6E-2wP">
+                                <rect key="frame" x="0.0" y="20" width="375" height="558"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fHS-3g-cVK">
+                                        <rect key="frame" x="0.0" y="16" width="375" height="190"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="190" id="k01-XX-oM2"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qhv-5Z-Emk">
+                                        <rect key="frame" x="16" y="290.5" width="343" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="JKE-gn-BhC">
+                                        <rect key="frame" x="16" y="343" width="343" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ke8-MD-NEV">
+                                        <rect key="frame" x="16" y="238" width="343" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="fHS-3g-cVK" secondAttribute="trailing" id="3NU-LI-6oG"/>
+                                    <constraint firstItem="JKE-gn-BhC" firstAttribute="top" secondItem="Qhv-5Z-Emk" secondAttribute="bottom" constant="32" id="6Gp-8S-4BY"/>
+                                    <constraint firstItem="JKE-gn-BhC" firstAttribute="leading" secondItem="ECT-6E-2wP" secondAttribute="leading" constant="16" id="APb-aw-M5A"/>
+                                    <constraint firstItem="fHS-3g-cVK" firstAttribute="leading" secondItem="ECT-6E-2wP" secondAttribute="leading" id="ITc-cZ-Yuk"/>
+                                    <constraint firstItem="fHS-3g-cVK" firstAttribute="top" secondItem="ECT-6E-2wP" secondAttribute="top" constant="16" id="K3h-8I-LEI"/>
+                                    <constraint firstItem="Ke8-MD-NEV" firstAttribute="leading" secondItem="ECT-6E-2wP" secondAttribute="leading" constant="16" id="MWP-IX-Num"/>
+                                    <constraint firstItem="Qhv-5Z-Emk" firstAttribute="leading" secondItem="ECT-6E-2wP" secondAttribute="leading" constant="16" id="N2B-f8-ull"/>
+                                    <constraint firstAttribute="trailing" secondItem="Qhv-5Z-Emk" secondAttribute="trailing" constant="16" id="TDb-Fn-ivV"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ke8-MD-NEV" secondAttribute="trailing" constant="16" id="X8O-p0-HLU"/>
+                                    <constraint firstAttribute="bottom" secondItem="JKE-gn-BhC" secondAttribute="bottom" constant="32" id="cxm-9X-BsL"/>
+                                    <constraint firstItem="Ke8-MD-NEV" firstAttribute="top" secondItem="fHS-3g-cVK" secondAttribute="bottom" constant="32" id="lLX-aH-hMY"/>
+                                    <constraint firstAttribute="trailing" secondItem="JKE-gn-BhC" secondAttribute="trailing" constant="16" id="tKn-O6-F5e"/>
+                                    <constraint firstItem="Qhv-5Z-Emk" firstAttribute="top" secondItem="Ke8-MD-NEV" secondAttribute="bottom" constant="32" id="xcO-k6-iyc"/>
+                                </constraints>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ja-Uc-EwN">
+                                <rect key="frame" x="23" y="594" width="329" height="53"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.72941176470000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="Les-bL-K9h"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
                                 <state key="normal" title="Buy">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -54,15 +82,18 @@
                                     <action selector="productDetailBuyButton:" destination="5rk-n3-tzj" eventType="touchUpInside" id="f98-Kf-0Os"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ke8-MD-NEV">
-                                <rect key="frame" x="16" y="309" width="343" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="fHS-3g-cVK" firstAttribute="width" secondItem="K54-l0-DeV" secondAttribute="width" id="5fi-qw-Vcq"/>
+                            <constraint firstItem="ECT-6E-2wP" firstAttribute="top" secondItem="K54-l0-DeV" secondAttribute="top" id="Fky-sZ-n7e"/>
+                            <constraint firstItem="4ja-Uc-EwN" firstAttribute="top" secondItem="ECT-6E-2wP" secondAttribute="bottom" constant="16" id="QMp-qJ-iJB"/>
+                            <constraint firstItem="K54-l0-DeV" firstAttribute="trailing" secondItem="4ja-Uc-EwN" secondAttribute="trailing" constant="23" id="V6t-WH-npf"/>
+                            <constraint firstItem="4ja-Uc-EwN" firstAttribute="leading" secondItem="K54-l0-DeV" secondAttribute="leading" constant="23" id="Wbq-Kw-CPP"/>
+                            <constraint firstItem="K54-l0-DeV" firstAttribute="bottom" secondItem="4ja-Uc-EwN" secondAttribute="bottom" constant="20" id="cLe-a3-4Ky"/>
+                            <constraint firstItem="ECT-6E-2wP" firstAttribute="leading" secondItem="K54-l0-DeV" secondAttribute="leading" id="j6g-Gd-tiV"/>
+                            <constraint firstItem="ECT-6E-2wP" firstAttribute="trailing" secondItem="K54-l0-DeV" secondAttribute="trailing" id="y7l-pj-bnB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="K54-l0-DeV"/>
                     </view>
                     <navigationItem key="navigationItem" title="Details" id="hIL-Ka-pHF">
