--- a/NaturalMee-PersonalProjectX/NaturallyMee PersonalProject/NaturallyMee PersonalProject/Storyboards/productDetail.storyboard
+++ b/NaturalMee-PersonalProjectX/NaturallyMee PersonalProject/NaturallyMee PersonalProject/Storyboards/productDetail.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ECT-6E-2wP">
-                                <rect key="frame" x="0.0" y="20" width="375" height="558"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="514"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fHS-3g-cVK">
                                         <rect key="frame" x="0.0" y="16" width="375" height="190"/>
@@ -98,6 +98,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Details" id="hIL-Ka-pHF">
                         <barButtonItem key="backBarButtonItem" title="Back" id="1ME-BB-eFI"/>
+                        <barButtonItem key="rightBarButtonItem" image="heart25px" style="plain" id="aQ5-QY-dKf">
+                            <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="productDetailDescriptionLabel" destination="JKE-gn-BhC" id="2Nq-IJ-iKb"/>
@@ -108,7 +111,28 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jwh-SV-IQp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2020" y="-56.221889055472268"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eHQ-kZ-MFn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="10Y-Qv-mMK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XJo-JY-PBa">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5rk-n3-tzj" kind="relationship" relationship="rootViewController" id="cMV-Hg-wbs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e9f-wr-dyl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="1080.8" y="-56.221889055472268"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="heart25px" width="25" height="25"/>
+    </resources>
 </document>
